--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,43 @@
 asgiref==3.5.2
 Bottleneck==1.3.5
+certifi==2023.5.7
+charset-normalizer==3.2.0
 click==8.0.4
 contourpy==1.0.5
 cycler==0.11.0
 dj-database-url==2.0.0
-Django==3.2.4
+Django==3.2.19
 django-environ==0.10.0
 django-extensions==3.2.1
+django-geoposition==0.3.0
+django-leaflet==0.29.0
 fonttools==4.25.0
+geographiclib==2.0
+geopy==2.3.0
 gunicorn==20.1.0
+idna==3.4
 kiwisolver==1.4.4
-matplotlib==3.5.1
+matplotlib==3.7.1
 munkres==1.1.4
 numexpr==2.8.4
 numpy==1.24.3
 packaging==23.0
 pandas==1.5.3
 Pillow==9.4.0
-pip
 ply==3.11
 psycopg2==2.9.3
 psycopg2-binary==2.9.6
 pyparsing==3.0.9
 PyQt5-sip==12.11.0
 python-dateutil==2.8.2
+python-decouple==3.8
 python-dotenv==0.21.0
 pytz==2022.7
-setuptools==67.8.0
+requests==2.31.0
 sip==6.6.2
 six==1.16.0
 sqlparse==0.4.3
 toml==0.10.2
 tornado==6.2
 typing_extensions==4.6.3
-wheel==0.38.4
-
-
+urllib3==2.0.3
